# theiaphylo

./: .gitignore  Dockerfile  README.md  env.yaml  environment.yml  pyproject.toml
test/: tree1.newick  tree2.newick
theiaphylo/: StdPath.py  TheiaPhylo.py  __init__.py  _version.py  clean_phylo.R  gen_cophylo.R  phylocompare.py  phyloutils.py  phylovalidate.py  theiaphylo.py
theiaphylo/lib/: StdPath.py  TheiaPhylo.py
